--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine on
+
+RewriteCond %{HTTP_HOST} ^www.newadres.house$
+RewriteRule ^(.*)$ http://newadres.house/$1 [R=301,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
